# rust-in-action

./: package-lock.json
action-form-exp/: Cargo.toml
action-form-exp/src/: app.rs  main.rs
action-form-exp/style/: main.scss
animated_show/: Cargo.toml  index.html
animated_show/src/: app.rs  main.rs
async-rust/: Cargo.toml  new_example.txt
async-rust/src/: main.rs
async-rust/src/modules/: mod.rs
async-rust/src/modules/async_exp/: mod.rs
async-rust/src/modules/futures/: http_requests.rs  mod.rs
async-rust/src/modules/futures_exp/: example.txt  file_io.rs  http_requests.rs  mod.rs
backend/: Cargo.toml
backend/src/: main.rs
cortex-kandji/: Cargo.toml
cortex-kandji/src/: main.rs
counter/: Cargo.toml  README.md  index.html
counter/src/: main.rs
counter/src/pages/: home.rs
counter_isomorphic/: Cargo.toml
counter_isomorphic/src/: app.rs  main.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
fullstack-app/: Cargo.toml
fullstack-app/src/: lib.rs  main.rs
grep-lite/: Cargo.toml
grep-lite/src/: main.rs
leptos-exp/: Cargo.toml
leptos-exp/src/: app.rs  main.rs
leptos-exp/src/models/: conversation.rs
leptos_app/: Cargo.toml
leptos_app/src/: lib.rs  main.rs
leptos_app/src/components_leptos/: first_comp.rs  mod.rs  vector_comp.rs
mandelbrot-set/: Cargo.toml
mandelbrot-set/src/: main.rs
squoosh_app/src/: main.rs
squoosh_app/src/img/: output.jxl
tcp-scanner/: Cargo.toml
tcp-scanner/src/: main.rs
yew-app/: Cargo.toml
yew-app/src/: main.rs
